Several fixes in CSS
* fix bubble:after small triangle display
* bubble background color gradients
* surfing class prompt sign changed

--- a/html/surfing.html
+++ b/html/surfing.html
@@ -86,26 +86,26 @@
             <h3>站点导航：</h3>
 
             <div class="siteclass">
-                学习：
+                <span class="siteclassname">学习</span>
                 <a href="http://info.tsinghua.edu.cn/index.jsp">信息门户</a>
                 <a href="thuportal.html">小信息门户</a>
             </div>
 
             <div class="siteclass">
-                搜索：
+                <span class="siteclassname">搜索</span>
                 <a href="http://www.google.com">Google.com</a>
                 <a href= "http://www.google.com/linux">Linux搜索</a>
                 <a href="http://www.baidu.com/">Baidu</a>
             </div>
 
             <div class="siteclass">
-                论坛：
+                <span class="siteclassname">论坛</span>
                 <a href="http://www.linuxdiyf.com/bbs">红联BBS</a>
                 <a href="http://bbs.fedora-zh.org/">fedora-zh</a>
             </div>
 
             <div class="siteclass">
-                空间：
+                <span class="siteclassname">空间</span>
                 <a href=
                     "http://www.google.com/reader/view/?hl=zh-CN&amp;tab=wy">Google
                     Reader</a>
@@ -116,7 +116,8 @@
             </div>
 
             <div class="siteclass">
-                工具： <a href="http://www.poptool.net/enet/mp3_lrc/">LRC歌词</a>
+                <span class="siteclassname">工具</span>
+                <a href="http://www.poptool.net/enet/mp3_lrc/">LRC歌词</a>
                 <a href="calcu_constellation_zodiac.html">星座属相计算器</a>
                 <a href="http://cgbt.cn/forums/viewthread.php?tid=237846">IPV6电视电台</a>
                 <a href="huochepiao.html">火车票查询</a>
@@ -125,11 +126,13 @@
             </div>
 
             <div class="siteclass">
-                友链： <a href="http://learn.tsinghua.edu.cn:8080/2008011108/index.htm">王鹤达的个人主页</a>
+                <span class="siteclassname">友链</span>
+                <a href="http://learn.tsinghua.edu.cn:8080/2008011108/index.htm">王鹤达的个人主页</a>
             </div>
 
             <div class="siteclass">
-                认证： <a href="https://auth-1.ccert.edu.cn:8443/eportal/index.jsp?s=e070690f5e1345db642039e328afb748&mac=f7d97f9e764d075e60a8e653dacc388f&vid=e3cbc67d63369647&port=946dc6803fa4b835&url=883dfa24377e48c91a6998b0929594e035ae3f8b51df504b2cd1a1a5b7e9cc3b680b8a92680054d9">IPv6 认证</a>
+                <span class="siteclassname">认证</span>
+                <a href="https://auth-1.ccert.edu.cn:8443/eportal/index.jsp?s=e070690f5e1345db642039e328afb748&mac=f7d97f9e764d075e60a8e653dacc388f&vid=e3cbc67d63369647&port=946dc6803fa4b835&url=883dfa24377e48c91a6998b0929594e035ae3f8b51df504b2cd1a1a5b7e9cc3b680b8a92680054d9">IPv6 认证</a>
             </div>
         </div>
     </div><!-- end of maincontent -->
