surfing: update sina microblog url to webo.com

--- a/html/surfing.html
+++ b/html/surfing.html
@@ -111,7 +111,7 @@
                 <a href="http://passport.renren.com/PLogin.do">上校内</a>
                 <a href="http://linux.cn/">linux.cn</a>
                 <a href="http://hi.baidu.com/alick_9188/home">baidu hi</a>
-                <a href="http://t.sina.com.cn/1824310035">sina微博</a>
+                <a href="http://weibo.com/alickzhao">sina 微博</a>
             </div>
 
             <div class="siteclass">
