--- a/html/about.html
+++ b/html/about.html
@@ -62,7 +62,7 @@
         </div>
         <div id="releasenotes">
 
-            <p>当前版本：v1.10</p>
+            <p>当前版本：v1.11 (2011/05/21)</p>
 
             <p class="version">Version 1.5(2010/09/19)</p>
 
