update outgoing links
remove www.google.com/linux
change http to https

--- a/html/surfing.html
+++ b/html/surfing.html
@@ -92,8 +92,7 @@
 
             <div class="siteclass">
                 <span class="siteclassname">搜索</span>
-                <a href="http://www.google.com">Google.com</a>
-                <a href= "http://www.google.com/linux">Linux搜索</a>
+                <a href="https://www.google.com">Google.com</a>
                 <a href="http://www.baidu.com/">Baidu</a>
             </div>
 
@@ -106,7 +105,7 @@
             <div class="siteclass">
                 <span class="siteclassname">空间</span>
                 <a href=
-                    "http://www.google.com/reader/view/?hl=zh-CN&amp;tab=wy">Google
+                    "https://www.google.com/reader/view/?hl=zh-CN&amp;tab=wy">Google
                     Reader</a>
                 <a href="http://passport.renren.com/PLogin.do">上校内</a>
                 <a href="http://linux.cn/">linux.cn</a>
