--- a/html/git.html
+++ b/html/git.html
@@ -37,15 +37,21 @@
                 <a href="../html/about.html">关于</a>
             </h2>
         </div><!-- end of wecando -->
+        <div>
+            <h2>安装</h2>
+            <p>在 Linux 的安装，只需从软件源下载即可。</p>
+            <p>Windows 下可用的版本，可以在<a href="http://code.google.com/p/msysgit/">这里</a>找到。</p>
+        </div>
 	<div>
-            <p>git 资源：</p>
+            <h2>git 资源：</h2>
             <ol>
-                <li><a href="http://progit.org/book/zh/">Pro Git 中文版</a>电子版，
-                <a href="http://progit.org.sixxs.org/book/zh/">IPV6连接</a>
+                <li><a href="http://progit.org/book/zh/">Pro Git 中文版</a>电子版。很不错的入门书。其中有对版本控制的介绍。
                 </li>
                 <li>
-                <a href="http://book.git-scm.com/">The Git Community Book</a>，
-                <a href="http://book.git-scm.com/book.pdf">pdf下载</a>
+                <a href="http://book.git-scm.com/">
+                    The Git Community Book</a>，
+                <a href="http://book.git-scm.com/book.pdf">pdf下载</a>。
+                这是 git 官网的指导书。
                 </li>
                 <li>
                 <a href="http://www-cs-students.stanford.edu/~blynn/gitmagic/index.html">GIT MAGIC</a>，
