--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title>Alick's Personal Homepage</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href="css/style1.css" rel="stylesheet" type="text/css" />
-    <link href="css/drag.css" rel="stylesheet" type="text/css" />
     <link href="img/favicon.ico" rel="SHORTCUT ICON" />
     <script type="text/javascript" src="js/eventsManager.js">
 </script>
@@ -18,12 +17,6 @@
     <script type="text/javascript" src="js/lunar1.js">
 </script>
     <script type="text/javascript" src="js/weather.js">
-</script>
-    <script type="text/javascript" src="js/drag.js">
-</script>
-    <script type="text/javascript" src="js/jquery.js">
-</script>
-    <script type="text/javascript" src="js/hide.js">
 </script>
 </head>
 
@@ -92,23 +85,14 @@
                 <li><a href="html/about.html">关于</a></li>
             </ul>
         </div><!-- end of wecando -->
-        <div class="dragAble" style="width: 30%;"> 测试一下可拖动 </div>
-        <div class="box_rgba dragAble" style="width: 30%;"> 测试一下透明和可拖动</div>
-        <div class="clickhide"> 点击我，我就会消失。</div>
-        <div class="clickhideslow"> 点击我，我会慢慢消失。</div>
-        <div class="clickfadeout"> 点击我，我会fade out。</div>
-
-        <div class="panel">
-<pre>
-白日依山尽，
-黄河入海流。
-欲穷千里目，
-更上一层楼。
-</pre>
+        <div>
+            <p>欢迎来到我的个人主页。
+            希望你能在这里发现有用或者有趣的东西。
+            至于这里究竟有什么东西，还真很难说清楚，
+            靠你发掘吧。:-)</p>
+            <p>鹤达和方洋请看<a href="html/linux.html">这里</a>
+            和<a href="html/git.html">这里</a>。:)</p>
         </div>
-        <p class="flip">显示/隐藏《登鹳雀楼》内容</p>
-
-        <p>欢迎来到我的个人主页。希望你能在这里发现有用或者有趣的东西。至于这里究竟有什么东西，你就慢慢的发掘吧。:-)</p>
     </div><!-- end of maincontent -->
 
     <div id="bottom">
