--- a/html/resources.html
+++ b/html/resources.html
@@ -87,6 +87,7 @@
                     <li><a href="Unix_philosophy.html">Unix哲学</a></li>
                     <li><a href=
                     "../txt/humourous_Linux_UNIX_commands.txt">幽默命令</a></li>
+                    <li><a href="linux.html">Linux</a></li>
                     <li><a href="emacs.html">EMACS</a></li>
                     <li><a href="vim.html">VIM</a></li>
                     <li><a href="fvwm.html">fvwm</a></li>
@@ -96,6 +97,7 @@
                     <li><a href="matlab.html">Matlab</a></li>
                     <li><a href="git.html">git</a></li>
                     <li><a href="spice.html">SPICE</a></li>
+                    <li><a href="jquery.html">jQuery</a></li>
                     <li><a href="math-test.xhtml">MathML</a></li>
                     <li><a href=
                     "../txt/Ati_and_Nvidia_graphics_naming.txt">ATI与Nvidia显卡命名规则</a></li>
