fixes according to XHTML standards

--- a/html/auto_switch.html
+++ b/html/auto_switch.html
@@ -4,7 +4,7 @@
 		<title>自动跳转</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<link href="style1.css" rel="stylesheet" type="text/css" />
-	<script language="JavaScript">
+	<script type="text/javascript">
     <!-- 
     var Browser_Agent=navigator.userAgent; 
 //document.write(Browser_Agent); 
