--- a/html/colors.html
+++ b/html/colors.html
@@ -40,7 +40,7 @@
         </div><!-- end of wecando -->
 
         <p id="colornum">How many colors? </p>
-	<table id="colortable">
+	<table id="colortable" summary="color-table">
 	</table>
 
     </div><!-- end of maincontent -->
