--- a/html/cprogramming.html
+++ b/html/cprogramming.html
@@ -39,7 +39,7 @@
         同样也是如今最流行（使用广泛）的语言之一。</p>
 
         <p>C 语言诞生于1972 年，设计者是AT&amp;T Bell 实验室的
-        Dennis M. Ritchie 。它的最初应用就是重写了Unix。<p>
+        Dennis M. Ritchie 。它的最初应用就是重写了Unix。</p>
         <p>C语言的特点是高效、灵活。它的移植性很好。因为它兼有高级语言和
         汇编语言的特点，所以它有时候会被称为``中级语言''。
         它属于函数式编程语言。</p>
