--- a/html/emacs.html
+++ b/html/emacs.html
@@ -34,7 +34,7 @@
         </div><!-- end of wecando -->
 
         <p> Emacs 是一个流行的文本编辑器。多么流行？嗯，和 
-        <a href="vim.html">Vim</a> 差不多。<p>
+        <a href="vim.html">Vim</a> 差不多。</p>
         <p> Emacs 如今也是无所不在的，至少它的键绑定是的。
         GNU Readline ，MATLAB UNIX版默认的键绑定都是 Emacs 风格的。
         </p>
