--- a/html/special_characters.html
+++ b/html/special_characters.html
@@ -13,11 +13,11 @@
     -->
     <link href="../img/favicon.ico" rel="SHORTCUT ICON" />
     <!-- <script type="text/javascript" src="../js/drag.js"> -->
-</script>
+        <!--</script>-->
 </head>
 
 <body>
-    <table style="border: 1px solid #aaaaaa;">
+    <table style="border: 1px solid #aaaaaa;" summary="Special Characters &amp; HTML entities">
         <th>
             Special Characters &amp; HTML entities
         </th>
