--- a/html/spice.html
+++ b/html/spice.html
@@ -22,7 +22,7 @@
         </div>
 
         <div id="tagline">
-            <p><strong></strong></p>
+            <p><strong>Simulation Program with Integrated Circuit Emphasis</strong></p>
         </div>
 
     </div><!-- end of header -->
