--- a/html/tex.html
+++ b/html/tex.html
@@ -60,7 +60,7 @@
         <p>下面列出一些在线资料</p>
 
         <ol>
-            <li>中文相关</li>
+            <li>中文相关
             <ol>
                 <li><a href=
                     "http://code.google.com/p/ctex-kit/wiki/SimpleChineseTemplates">ctex-kit
@@ -70,40 +70,44 @@
                     "http://yihui.name/cn/2010/02/misc-issues-in-latex-lyx-r-sweave-pgfsweave/">
                     关于LaTeX+LyX+R/Sweave+pgfSweave+PDF图形的若干中文问题 | 谢益辉</a></li>
             </ol>
-
-            <li>命令帮助</li>
+            </li>
+            <li>命令帮助
             <ol>
                 <li><a href="http://www.ctex.org/documents/latex/latex2e-html/ltx-2.html">Help On LaTeX Commands</a></li>
             </ol>
-
-            <li>数学</li>
+            </li>
+            <li>数学
             <ol>
                 <li><a href=
                     "http://blog.sina.com.cn/s/blog_61403f080100ej8t.html">latex帮助
                     （显示数学公式）_老李_新浪博客</a></li>
             </ol>
+            </li>
 
-            <li>宏包</li>
+            <li>宏包
             <ol>
                 <li><a href="http://ece.uwaterloo.ca/~aplevich/Circuit_macros/html/examples.html">Circuit_macro examples</a></li>
             </ol>
+            </li>
 
-            <li>幻灯片</li>
+            <li>幻灯片
             <ol>
                 <li><a href=
                     "http://dsec.pku.edu.cn/~yuhj/wiki/TeXSlides.html">
                     做幻灯片(Slide)的建议</a></li>
             </ol>
+            </li>
 
-            <li>画图，插图</li>
+            <li>画图，插图
             <ol>
                 <li><a href="http://tex.loria.fr/prod-graph/zoonekynd/metapost/metapost.html">Metapost : exemples</a></li>
 
                 <li><a href="http://www.reimeika.ca/marco/prettyplots/">Making plots using Octave, gnuplot, and LaTeX</a></li>
                 <li><a href="http://www.ctex.org/documents/latex/graphics/">LATEX2e 插图指南 王磊</a></li>
             </ol>
+            </li>
 
-            <li>Misc 杂项</li>
+            <li>Misc 杂项
             <ol>
                 <li><a href="http://www.codecogs.com/latex/eqneditor.php">Online
                     LaTeX Equation Editor</a></li>
@@ -113,6 +117,7 @@
 
                 <li><a href="http://detexify.kirelabs.org/classify.html">Detexify LaTeX handwritten symbol recognition</a></li>
             </ol>
+            </li>
 
         </ol>
     </div><!-- end of maincontent -->
