--- a/html/git.html
+++ b/html/git.html
@@ -62,8 +62,10 @@
                 <li><a href="http://sysmonblog.co.uk/misc/git_by_example/">Git By Example</a></li>
                 <li><a href="http://sites.google.com/a/kingofat.com/wiki/git-tutorial">git使用指南</a>比较基础，一般够用了</li>
                 <li><a href="http://www.kuqin.com/docs/gittutorcn.html">GIT中文教程</a>，貌似有点旧</li>
-                <li><a href="http://www.youtube.com/watch?v=4XpnKHJAok8">Google Tech Talk: Linus Torvalds on git</a>, The<a href="">Transcript</a></li>
+                <li><a href="http://www.youtube.com/watch?v=4XpnKHJAok8">Google Tech Talk: Linus Torvalds on git</a>, The <a href="https://git.wiki.kernel.org/index.php/LinusTalk200705Transcript">Transcript</a> 
+                <a href="../html/LinusTalk200705Transcript.html">本地镜像</a></li>
                 <li><a href="#">To be continued.</a></li>
+            </ol>
 	</div>
 
     </div><!-- end of maincontent -->
