--- a/html/surfing.html
+++ b/html/surfing.html
@@ -130,7 +130,7 @@
 
             <div class="siteclass">
                 <span class="siteclassname">认证</span>
-                <a href="https://auth-1.ccert.edu.cn:8443/eportal/index.jsp?s=e070690f5e1345db642039e328afb748&mac=f7d97f9e764d075e60a8e653dacc388f&vid=e3cbc67d63369647&port=946dc6803fa4b835&url=883dfa24377e48c91a6998b0929594e035ae3f8b51df504b2cd1a1a5b7e9cc3b680b8a92680054d9">IPv6 认证</a>
+                <a href="https://auth-1.ccert.edu.cn:8443/eportal/index.jsp?s=e070690f5e1345db642039e328afb748&amp;mac=f7d97f9e764d075e60a8e653dacc388f&amp;vid=e3cbc67d63369647&amp;port=946dc6803fa4b835&amp;url=883dfa24377e48c91a6998b0929594e035ae3f8b51df504b2cd1a1a5b7e9cc3b680b8a92680054d9">IPv6 认证</a>
             </div>
         </div>
     </div><!-- end of maincontent -->
