--- a/html/vim.html
+++ b/html/vim.html
@@ -10,7 +10,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href="../css/style1.css" rel="stylesheet" type="text/css" />
     <!--<script type="text/javascript" src="../js/">-->
-</script>
+        <!--</script>-->
 </head>
 
 <body>
