updates on surfing page
* nicer surfing anchor:
	border-radius, bold on hover, padding on left and right side
* move two utils to utils.html
* add space between CJK/nonCJK char

--- a/html/utils.html
+++ b/html/utils.html
@@ -18,7 +18,7 @@
     <div id="header">
 
         <div id="sitebranding">
-            <h1>欢迎光临</h1>
+            <h1>实用工具</h1>
         </div>
 
         <div id="tagline">
@@ -39,6 +39,10 @@
         </div><!-- end of wecando -->
 
         <ul>
+            <li><a href="http://www.poptool.net/enet/mp3_lrc/">LRC歌词
+            </a></li>
+            <li><a href="calcu_constellation_zodiac.html">星座属相计算器
+            </a></li>
             <li><a href="http://xh.5156edu.com/conversion.html">汉字转拼音
                 （带音调）</a></li>
             <li><a href="http://xh.5156edu.com/jtof.php">汉字简体繁体转换
