--- a/html/surfing.html
+++ b/html/surfing.html
@@ -92,7 +92,7 @@
 
             <div class="siteclass">
                 <span class="siteclassname">搜索</span>
-                <a href="https://www.google.com">Google.com</a>
+                <a href="https://www.google.com">Google</a>
                 <a href="http://www.baidu.com/">Baidu</a>
             </div>
 
@@ -115,11 +115,9 @@
 
             <div class="siteclass">
                 <span class="siteclassname">工具</span>
-                <a href="http://www.poptool.net/enet/mp3_lrc/">LRC歌词</a>
-                <a href="calcu_constellation_zodiac.html">星座属相计算器</a>
-                <a href="http://cgbt.cn/forums/viewthread.php?tid=237846">IPV6电视电台</a>
+                <a href="http://cgbt.cn/forums/viewthread.php?tid=237846">IPv6 电视电台</a>
                 <a href="huochepiao.html">火车票查询</a>
-                <a href="http://www.ip138.com/ips8.asp">IP查询</a>
+                <a href="http://www.ip138.com/ips8.asp">IP 查询</a>
                 <a href="utils.html">更多</a>
             </div>
 
