--- a/html/resources.html
+++ b/html/resources.html
@@ -78,10 +78,8 @@
         </div><!-- end of wecando -->
 
         <div id="resources">
-            <h3>文档资料：</h3>
-
             <div id="local" class="shadow">
-                <p>本站资料：</p>
+                <h2>本站资料：</h2>
 
                 <ol>
                     <li><a href="Unix_philosophy.html">Unix哲学</a></li>
@@ -105,9 +103,9 @@
             </div><!-- end of local div -->
 
             <div id="web">
-                <p>网络资料：</p>
+                <h2>网络资料：</h2>
 
-                <ol>
+                <ol class="cjk">
                     <li><a href="http://chl.be/mascots/">开源吉祥物汇总</a></li>
 
                     <li><a href=
