--- a/html/about.html
+++ b/html/about.html
@@ -14,8 +14,8 @@
 </script>
     <script type="text/javascript" src="../js/lunar1.js">
 </script>
-    <script type="text/javascript" src="../js/weather.js">
-</script>
+<!--<script type="text/javascript" src="../js/weather.js">-->
+    <!--</script>-->
     <script type="text/javascript" src="../js/jquery.js">
 </script>
     <script type="text/javascript" src="../js/hide.js">
@@ -42,7 +42,7 @@
             <!-- show current time -->
         </div>
 
-        <div id="weather"></div>
+        <!--<div id="weather"></div>-->
     </div><!-- end of header -->
 
     <div id="maincontent">
