--- a/html/images.html
+++ b/html/images.html
@@ -16,8 +16,8 @@
 </script>
     <script type="text/javascript" src="../js/lunar1.js">
 </script>
-    <script type="text/javascript" src="../js/weather.js">
-</script>
+<!--<script type="text/javascript" src="../js/weather.js">-->
+    <!--</script>-->
 </head>
 
 <body>
@@ -38,9 +38,9 @@
             <!-- show current time -->
         </div>
 
-        <div id="weather">
-        </div><!-- end of sidebar -->
-    </div>
+        <!--<div id="weather"> </div>-->
+        
+    </div><!-- end of sidebar -->
 
     <div id="maincontent">
         <div id="wecando" class="shadow">
