--- a/html/music.html
+++ b/html/music.html
@@ -14,8 +14,8 @@
 </script>
     <script type="text/javascript" src="../js/lunar1.js">
 </script>
-    <script type="text/javascript" src="../js/weather.js">
-</script>
+<!--<script type="text/javascript" src="../js/weather.js">-->
+    <!--</script>-->
 </head>
 
 <body>
@@ -36,8 +36,7 @@
             <!-- show current time -->
         </div>
 
-        <div id="weather">
-        </div>
+        <!--<div id="weather"></div>-->
     </div><!-- end of sidebar -->
 
     <div id="maincontent">
