--- a/html/resources.html
+++ b/html/resources.html
@@ -16,8 +16,8 @@
 </script>
     <script type="text/javascript" src="../js/lunar1.js">
 </script>
-    <script type="text/javascript" src="../js/weather.js">
-</script>
+<!--<script type="text/javascript" src="../js/weather.js">-->
+    <!--</script>-->
 </head>
 
 <body>
@@ -37,8 +37,7 @@
             <!-- show current time -->
         </div>
 
-        <div id="weather">
-        </div>
+        <!--<div id="weather"></div>-->
 
         <div id="search">
             <!-- SiteSearch Google copyed from Google but modified-->
