--- a/html/surfing.html
+++ b/html/surfing.html
@@ -42,7 +42,7 @@
             <!-- show current time -->
         </div>
 
-        <div id="weather"></div>
+        <!--<div id="weather"></div>-->
 
         <div id="search">
             <!-- SiteSearch Google copyed from Google but modified-->
