--- a/index.html
+++ b/index.html
@@ -40,11 +40,7 @@
             <!--<object type="text/html" data="http://www.265.com/time.html"></object>-->
         </div>
 
-        <div id="weather">
-            <!--<object type="text/html" data="http://www.265.com/weather.htm"
-            name="I2">
-                </object>-->
-        </div>
+        <!--<div id="weather"></div>-->
 
         <div id="search">
             <!-- SiteSearch Google copyed from Google but modified-->
