add wind.html (a wind degree table)

--- a/html/utils.html
+++ b/html/utils.html
@@ -47,6 +47,7 @@
                 （带音调）</a></li>
             <li><a href="http://xh.5156edu.com/jtof.php">汉字简体繁体转换
             </a></li>
+            <li><a href="wind.html">风力等级表</a></li>
         </ul>
     </div><!-- end of maincontent -->
 
