add ascii smileys tables; font-family change
* Add a page about various ASCII smileys.

* The default font-family is changed. Now the default font is
Cantarell as with fedoraproject.org. Let's see how good it is.

* It should be noted that the link to wind.html is now under
resources.html rather than utils.html.

--- a/html/resources.html
+++ b/html/resources.html
@@ -96,8 +96,10 @@
                     <li><a href="spice.html">SPICE</a></li>
                     <li><a href="jquery.html">jQuery</a></li>
                     <li><a href="math-test.xhtml">MathML</a></li>
-                    <li><a href=
-                    "../txt/Ati_and_Nvidia_graphics_naming.txt">ATI与Nvidia显卡命名规则</a></li>
+                    <li><a href="../txt/Ati_and_Nvidia_graphics_naming.txt">
+                        ATI与Nvidia显卡命名规则</a></li>
+                    <li><a href="wind.html">风力等级表</a></li>
+                    <li><a href="ascii_smileys.html">ASCII 表情符</a></li>
                 </ol>
             </div><!-- end of local div -->
 
