add chat acronyms page

--- a/html/resources.html
+++ b/html/resources.html
@@ -100,6 +100,7 @@
                         ATI与Nvidia显卡命名规则</a></li>
                     <li><a href="wind.html">风力等级表</a></li>
                     <li><a href="ascii_smileys.html">ASCII 表情符</a></li>
+                    <li><a href="chat_acronyms.html">聊天中常见英文缩略词</a></li>
                 </ol>
             </div><!-- end of local div -->
 
