[index.html] enrich introduction

--- a/index.html
+++ b/index.html
@@ -81,13 +81,22 @@
                 <li><a href="html/about.html">关于</a></li>
             </ul>
         </div><!-- end of wecando -->
-        <div>
-            <p>欢迎来到我的个人主页。
-            希望你能在这里发现有用或者有趣的东西。
-            至于这里究竟有什么东西，还真很难说清楚，
-            靠你发掘吧。:-)</p>
-            <p>鹤达和方洋请看<a href="html/linux.html">这里</a>
-            和<a href="html/git.html">这里</a>。:)</p>
+        <div id="introduction">
+            <p>欢迎来到我的个人主页。</p>
+
+            <p>
+            这里有一个我上网用的门户，一些文档资料，几张图片，OGG
+            音乐的介绍，以及为什么有这些东西的说明。点击导航菜单，
+            即可看到这些东西。这里还有一个 Google 搜索框，
+            一个万年历加时钟，它们出现在主要页面的侧边栏中。
+            </p>
+            <p>
+            这里没有访问次数统计，没有留言板，没有帐号注册和登录按钮。
+            这是因为这些页面所在的网络学堂个人主页服务不支持使用 PHP
+            等语言生成动态页面，所有可用的就是 HTML/CSS/Javascript 了。
+            <p>
+            最后，希望你能在这里发现有用或者有趣的东西 :-)
+            </p>
         </div>
     </div><!-- end of maincontent -->
 
