[tex.html] add latex intro, update tex live info

--- a/html/resources.html
+++ b/html/resources.html
@@ -88,7 +88,7 @@
                     <li><a href="emacs.html">EMACS</a></li>
                     <li><a href="vim.html">VIM</a></li>
                     <li><a href="fvwm.html">fvwm</a></li>
-                    <li><a href="tex.html">TeX</a></li>
+                    <li><a href="tex.html"><span class="latex">T<sub>e</sub>X</span></a></li>
                     <li><a href="cprogramming.html">C语言</a></li>
                     <li><a href="python.html">Python语言</a></li>
                     <li><a href="matlab.html">Matlab</a></li>
