refresh surfing sites

--- a/html/surfing.html
+++ b/html/surfing.html
@@ -88,6 +88,7 @@
             <div class="siteclass">
                 <span class="siteclassname">学习</span>
                 <a href="http://info.tsinghua.edu.cn/index.jsp">信息门户</a>
+                <a href="http://mirrors.tuna.tsinghua.edu.cn/">开源镜像站</a>
             </div>
 
             <div class="siteclass">
@@ -99,7 +100,8 @@
             <div class="siteclass">
                 <span class="siteclassname">论坛</span>
                 <a href="http://www.linuxdiyf.com/bbs">红联BBS</a>
-                <a href="http://bbs.fedora-zh.org/">fedora-zh</a>
+                <a href="http://www.newsmth.net/">水木社区</a>
+                <a href="http://thuee.net/">FREE</a>
             </div>
 
             <div class="siteclass">
@@ -108,8 +110,6 @@
                     "https://www.google.com/reader/view/?hl=zh-CN&amp;tab=wy">Google
                     Reader</a>
                 <a href="http://passport.renren.com/PLogin.do">上校内</a>
-                <a href="http://linux.cn/">linux.cn</a>
-                <a href="http://hi.baidu.com/alick_9188/home">baidu hi</a>
                 <a href="http://weibo.com/alickzhao">sina 微博</a>
             </div>
 
