surfing: press key 'g' set focus on input text bar

--- a/html/surfing.html
+++ b/html/surfing.html
@@ -15,8 +15,9 @@
 </script>
     <script type="text/javascript" src="../js/multiSearch.js">
 </script>
-    <script type="text/javascript" src="../js/lunar1.js">
-</script>
+    <script type="text/javascript" src="../js/lunar1.js"></script>
+    <script type="text/javascript" src="../js/jquery.js"></script>
+    <script type="text/javascript" src="../js/kbdshortcuts.js"></script>
 </head>
 
 <body>
