--- a/html/resources.html
+++ b/html/resources.html
@@ -94,6 +94,7 @@
                     <li><a href="matlab.html">Matlab</a></li>
                     <li><a href="git.html">git</a></li>
                     <li><a href="spice.html">SPICE</a></li>
+                    <li><a href="gnuradio.html">GNU Radio</a></li>
                     <li><a href="jquery.html">jQuery</a></li>
                     <li><a href="math-test.xhtml">MathML</a></li>
                     <li><a href="../txt/Ati_and_Nvidia_graphics_naming.txt">
