add stuff in cprogramming

--- a/html/cprogramming.html
+++ b/html/cprogramming.html
@@ -39,10 +39,10 @@
         同样也是如今最流行（使用广泛）的语言之一。</p>
 
         <p>C 语言诞生于1972 年，设计者是AT&amp;T Bell 实验室的
-        Dennis M. Ritchie 。它的最初应用就是重写了Unix。</p>
+        <a href="http://en.wikipedia.org/wiki/Dennis_Ritchie">Dennis M. Ritchie</a>。它的最初应用就是重写了Unix。</p>
         <p>C语言的特点是高效、灵活。它的移植性很好。因为它兼有高级语言和
         汇编语言的特点，所以它有时候会被称为``中级语言''。
-        它属于函数式编程语言。</p>
+        它属于过程式编程语言。</p>
 
         <p>指针是C语言的精华。</p>
 
@@ -52,6 +52,7 @@
         <p>下面列出一些特定主题的资料：</p>
 
         <ol>
+            <li><a href="https://www.securecoding.cert.org/confluence/display/seccode/INT02-C.+Understand+integer+conversion+rules">Understand integer conversion rules</a></li>
             <li><a href=
                 "C_operator_priority_list.html">C语言运算符优先级详细列表</a></li>
 
