gsm-gprs: enrich by info from Wikipedia

--- a/html/gsm-gprs.html
+++ b/html/gsm-gprs.html
@@ -51,6 +51,9 @@
             <li>up-link: Reservation ALOHA</li>
             <li>channel encoding: convolutional code, GMSK modulation</li>
             <li>shared nature, contrast to HSCSD</li>
+            <li>multislot class: high speed</li>
+            <li>low speed, long RTT</li>
+            <li>prioritized lower than speech</li>
 	</ul>
 
     </div><!-- end of maincontent -->
