adjust css attribute of h1-h3

--- a/html/gsm-gprs.html
+++ b/html/gsm-gprs.html
@@ -110,6 +110,7 @@
             <li>发送/接收时槽有时间偏移</li>
         </ul>
         <h3>Logical Channels(Traffic Channels and Control Channels)</h3>
+        <p>每个 channel 对应一个时隙的重复出现。</p>
         <p>Traffic Channels</p>
         <ul>
             <li>full rate channels</li>
