--- a/html/gsm-gprs.html
+++ b/html/gsm-gprs.html
@@ -110,36 +110,55 @@
             <li>发送/接收时槽有时间偏移</li>
         </ul>
         <h3>Logical Channels(Traffic Channels and Control Channels)</h3>
-        <p>每个 channel 对应一个时隙的重复出现。</p>
-        <p>Traffic Channels</p>
+        <p>信道(channel) 映射为一个时隙的重复出现，对应一个频率和TDMA中的一个时槽。</p>
+        <p>Traffic Channels(TCH): speech and data</p>
         <ul>
-            <li>full rate channels</li>
-            <li>half rate channels</li>
-        </ul>
-        <p>Control Channels</p>
-        <ul>
-            <li>BCCH: Broadcast control channel 广播
+            <li>TCH/F: full rate channels
             <ul>
-                <li>BCCH 广播控制信道</li>
-                <li>FCCH 频率修正信道</li>
-                <li>SCH 同步信道</li>
+                <li>26-Multiframe(120ms): 24 for traffic +
+                1 for <abbr title="Slow Associated Control Channel">
+                    SACCH</abbr> + 1 unused</li>
+                <li>uplink/downlink separated by 3 bursts</li>
             </ul>
             </li>
-            <li>CCCH 公共控制信道
+            <li>TCH/H: half rate channels
+            <ul>
+                <li>double capacity</li>
+                <li>26-Multiframe, internal different...</li>
+            </ul>
+            </li>
+        </ul>
+        <p>Control Channels: network management, channel maintainance</p>
+        <ul>
+            <li>BCH(Broadcast channels): BS 广播给 MS
+            <ul>
+                <li><abbr title="Broadcast Control Channel">BCCH</abbr>
+                广播控制信道
+                parameters needed to identify and access the network</li>
+                <li><abbr title="Frequency-Correction Channel">FCCH</abbr>
+                频率修正信道 frequency reference</li>
+                <li><abbr title="Synchronization Channel">SCH</abbr>
+                同步信道 training symbol sequece</li>
+            </ul>
+            </li>
+            <li>CCCH(Common Control Channels) 公共控制信道
+            establish the calls
             <ul>
                 <li>PCH(Paging channel) 寻呼信道
-                only downlink, handling incoming call</li>
-                <li>RACH 随机接入信道
+                only downlink, alert MS of incoming call</li>
+                <li>RACH(Random Access Channel) 随机接入信道
                 only uplink, requesting connection establishment</li>
-                <li>AGCH 接入确认信道
+                <li>AGCH(Access Grant Channel) 接入确认信道
                 BTS inform MS outcome of connection setup request</li>
             </ul>
             </li>
-            <li>DCCH
+            <li>DCCH(Dedicated Control Channels) message exchange
             <ul>
-                <li>SDCCH 独立专用控制信道</li>
-                <li>SACCH 慢相关控制信道</li>
-                <li>FACCH 快相关控制信道</li>
+                <li>SDCCH(Standalone Dedicated Control Channel)
+                独立专用控制信道 exchage sigaling uplink and downlink</li>
+                <li>SACCH 慢相关控制信道 channel maintainance and control</li>
+                <li>FACCH 快相关控制信道
+                replace traffic channel when urgent sigaling needed</li>
             </ul>
             </li>
         </ul>
