enrich gsm-gprs.html

--- a/html/gsm-gprs.html
+++ b/html/gsm-gprs.html
@@ -96,7 +96,17 @@
             and Services </a></p>
 
         <h2>空中接口</h2>
+        <p>空中接口：Um 接口，LAP-Dm 协议做信令</p>
         <p>GSM 多址技术：FDMA、TDMA、random access</p>
+        <h3>协议栈</h3>
+        <ol>
+            <li>物理层：射频 900MHz</li>
+            <li>链路层：LAD-Dm</li>
+            <li>网络层：
+            <abbr title="Mobility Management">MM</abbr>,
+            <abbr title="Connection Management">CM</abbr>,
+            <abbr title="Radio Resource management">RR</abbr></li>
+        </ol>
         <h3>GSM FDMA Structure</h3>
         <p>Fig Missing!</p>
         <h3>GSM TDMA Frame Structure</h3>
